--- a/bricks/riverpod_simple_architecture/brick.yaml
+++ b/bricks/riverpod_simple_architecture/brick.yaml
@@ -1,9 +1,9 @@
 name: riverpod_simple_architecture
-description: A new brick created with the Mason CLI.
+description: A opinionated riverpod simple architecture with built in features for production ready flutter apps.
 
 # The following defines the brick repository url.
 # Uncomment and update the following line before publishing the brick.
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/Shreemanarjun/river_bricks
 
 # The following defines the version and build number for your brick.
 # A version number is three numbers separated by dots, like 1.2.34
