--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ pubspec.lock
 build/
 
 bricks/riverpod_simple_architecture/CHANGELOG.md
+bricks/riverpod_simple_architecture/__brick__/custom_lint.log
