--- a/bricks/riverpod_simple_architecture/__brick__/pubspec.yaml
+++ b/bricks/riverpod_simple_architecture/__brick__/pubspec.yaml
@@ -1,4 +1,4 @@
-name: {{project_name.snakeCase()}}
+name: { { project_name.snakeCase() } }
 description: ""
 version: 1.0.0+1
 publish_to: none
@@ -8,11 +8,11 @@ environment:
 
 dependencies:
   auto_route: ^7.7.0
-  dio: ^5.2.1+1
+  dio: ^5.3.2
   dio_smart_retry: ^5.0.0
-  duration: ^3.0.12
+  duration: ^3.0.13
   flash: ^3.0.5+1
-  flex_color_scheme: ^7.1.2
+  flex_color_scheme: ^7.2.0
   flutter:
     sdk: flutter
   flutter_displaymode: ^0.6.0
@@ -22,24 +22,30 @@ dependencies:
   hive_flutter: ^1.1.0
   internet_connection_checker: ^1.0.0+1
   intl: ^0.18.0
-  path_provider: ^2.0.15
+  path_provider: ^2.1.0
   platform_info: ^4.0.2
-  responsive_framework: ^1.1.0
-  talker_dio_logger: ^2.1.2
-  talker_flutter: ^3.1.5
-  velocity_x: ^4.1.0
+  # Downgraded to 0.2.0 from 1.1.0 due to
+  # latest version doesnot have migartion docs
+  responsive_framework: 0.2.0
+  talker_dio_logger: ^2.3.0
+  talker_flutter: ^3.2.7
+  velocity_x: ^4.1.1
 
 dev_dependencies:
   auto_route_generator: ^7.1.1
   build_runner: ^2.4.6
-  custom_lint: ^0.4.0
+  custom_lint: ^0.5.1
   flutter_lints: ^2.0.2
   flutter_test:
     sdk: flutter
-  mocktail: ^0.3.0
-  riverpod_lint: ^1.3.2
+  mocktail: ^1.0.0
+  riverpod_lint: ^2.0.0
   riverpod_test: ^0.1.3
   very_good_analysis: ^5.0.0
+
+# Added temporary for custom lint and riverpod lint
+dependency_overrides:
+  analyzer: ^6.0.0
 
 flutter:
   uses-material-design: true
