--- a/bricks/riverpod_simple_architecture/__brick__/pubspec.yaml
+++ b/bricks/riverpod_simple_architecture/__brick__/pubspec.yaml
@@ -1,4 +1,4 @@
-name: {{project_name.snakeCase()}}
+name: { { project_name.snakeCase() } }
 description: ""
 version: 1.0.0+1
 publish_to: none
@@ -7,26 +7,24 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  auto_route: ^7.7.0
+  auto_route: ^7.8.3
   dio: ^5.3.2
   dio_smart_retry: ^5.0.0
   duration: ^3.0.13
   flash: ^3.0.5+1
-  flex_color_scheme: ^7.2.0
+  flex_color_scheme: ^7.3.1
   flutter:
     sdk: flutter
   flutter_displaymode: ^0.6.0
   flutter_localizations:
     sdk: flutter
-  flutter_riverpod: ^2.3.6
+  flutter_riverpod: ^2.4.0
   hive_flutter: ^1.1.0
   internet_connection_checker: ^1.0.0+1
-  intl: ^0.18.0
-  path_provider: ^2.1.0
+  intl: ^0.18.1
+  path_provider: ^2.1.1
   platform_info: ^4.0.2
-  # Downgraded to 0.2.0 from 1.1.0 due to
-  # latest version doesnot have migartion docs
-  responsive_framework: 0.2.0
+  responsive_framework: ^1.1.1
   talker_dio_logger: ^2.3.0
   talker_flutter: ^3.2.7
   velocity_x: ^4.1.1
