--- a/bricks/riverpod_simple_architecture/__brick__/pubspec.yaml
+++ b/bricks/riverpod_simple_architecture/__brick__/pubspec.yaml
@@ -20,11 +20,13 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.4.0
   hive_flutter: ^1.1.0
-  internet_connection_checker: ^1.0.0+1
+  internet_connection_checker_plus: ^2.0.0
   intl: ^0.18.1
   path_provider: ^2.1.1
   platform_info: ^4.0.2
-  responsive_framework: ^1.1.1
+  # Downgraded to 0.2.0 from 1.1.0 due to
+  # latest version doesnot have migartion docs
+  responsive_framework: 1.1.1
   talker_dio_logger: ^2.3.0
   talker_flutter: ^3.2.7
   velocity_x: ^4.1.1
@@ -37,13 +39,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mocktail: ^1.0.0
-  riverpod_lint: ^2.0.0
+  riverpod_lint: ^2.1.0
   riverpod_test: ^0.1.3
   very_good_analysis: ^5.0.0
-
-# Added temporary for custom lint and riverpod lint
-dependency_overrides:
-  analyzer: ^6.0.0
 
 flutter:
   uses-material-design: true
