--- a/bricks/riverpod_simple_architecture/brick.yaml
+++ b/bricks/riverpod_simple_architecture/brick.yaml
@@ -8,7 +8,7 @@ repository: https://github.com/Shreemanarjun/river_bricks
 # The following defines the version and build number for your brick.
 # A version number is three numbers separated by dots, like 1.2.34
 # followed by an optional build number (separated by a +).
-version: 2.0.24+24
+version: 2.0.25+25
 
 # The following defines the environment for the current brick.
 # It includes the version of mason that the brick requires.
@@ -24,8 +24,8 @@ environment:
 #  * an optional list of default values (array only)
 #  * an optional prompt phrase used when asking for the variable
 #  * a list of values (enums only)
-vars:
-  project_name:
-    type: string
-    description: Your project name
-    prompt: What is your prjoect name?
+# vars:
+#   project_name:
+#     type: string
+#     description: Your project name
+#     prompt: What is your prjoect name?
